fixed import link in demo from  to

--- a/demo/index.html
+++ b/demo/index.html
@@ -15,7 +15,7 @@
 <px-sass-doc
   module-name="px-typography-design"
   description="The Predix UI Typography module defines styles for basic typography."
-  layer="settings"
+  layer="base"
   sassdoc-path="sassdoc.json"
   dependencies='[
     "https://github.com/PredixDev/px-colors-design",
