runtime theming for demo

--- a/demo/px-typography-design-demo.html
+++ b/demo/px-typography-design-demo.html
@@ -5,7 +5,7 @@
 <link rel="import" href="../../px-sass-doc/px-sass-doc.html" />
 
 <!-- Demo DOM module -->
-<dom-module id="local-element-demo">
+<dom-module id="px-typography-design-demo">
   <template>
     <!-- 0: Import the styles-->
 
@@ -63,7 +63,7 @@
 <!-- 6: Handle selectedOptions, update demo -->
 <script>
   Polymer({
-    is: 'local-element-demo',
+    is: 'px-typography-design-demo',
 
     attached : function(){
       var boundHandler = this._handleOptionsUpdated.bind(this);
