--- a/index.html
+++ b/index.html
@@ -92,6 +92,13 @@
         margin: 0;
         padding: 0;
       }
+      .weight--normal {
+        font-weight: 400!important;
+      }
+
+      .weight--bold {
+        font-weight: 600!important;
+      }
     </style>
   </head>
 
